Bug 156243 - AUTOCORRECT: with "Edit"->"Track Changes"->"Show" enabled, doing "Tools"->"AutoCorrect"->"Apply and Edit Changes"->"Accept All" fails to AutoCorrect last character in sequence
Summary: AUTOCORRECT: with "Edit"->"Track Changes"->"Show" enabled, doing "Tools"->"Au...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.7.2 release
Hardware: All All
: medium normal
Assignee: Matt K
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: AutoCorrect-Complete
  Show dependency treegraph
 
Reported: 2023-07-11 22:07 UTC by Matt K
Modified: 2023-12-05 09:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt K 2023-07-11 22:07:49 UTC
Description:
With "Edit"->"Track Changes"->"Show" enabled, doing "Tools"->"AutoCorrect"->"Apply and Edit Changes"->"Accept All" fails to AutoCorrect last character in sequence.

Steps to Reproduce:
1.Open Writer
2.Type some text (e.g. "_bbb_")
3.Ensure "Tools"->"AutoCorrect"->"AutoCorrect Options" has "Automatic *bold*..." checked on"
4.Assuming step 2 wasn't already autocorrected, go to "Tools"->"AutoCorrect"->"Apply and Edit Changes"->"Accept All"

Actual Results:
Text that was AutoCorrected fails to correct last character in typed sequence.

Expected Results:
Text that gets AutoCorrected should AutoCorrect every character in typed sequence.


Reproducible: Always


User Profile Reset: No

Additional Info:
Tested on latest master on Win10
Comment 1 stragu 2023-07-12 10:27:24 UTC
Reproduced in:

Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

and recent master build:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 663db89378aa1f0425e795ef5d471f134e658dc4
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

and in 7.2:

Version: 7.2.7.2 / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Could not reproduce in 7.1 because of a crash, see bug 145546 comment 13.
Comment 2 Matt K 2023-07-21 20:17:39 UTC
Fix is tracked in https://gerrit.libreoffice.org/c/core/+/154685.
Comment 3 Commit Notification 2023-11-25 11:42:20 UTC
Matt K committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b6e273aaaf597b60f78c1dd3db8676eea958a9f5

tdf#156243 Fix off-by-one bug for autocorrect

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2023-12-02 18:40:08 UTC
Can this be closed as fixed?
Comment 5 Matt K 2023-12-02 22:24:41 UTC
(In reply to Buovjaga from comment #4)
> Can this be closed as fixed?

Yes, closing it.
Comment 6 stragu 2023-12-05 09:08:23 UTC
Verified as fixed in:

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 43967453e15e1d054972a7586cfef8f8e0866270
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you Matt!