sw/Module_sw.mk
@@ -212,6 +212,7 @@ $(eval $(call gb_Module_add_uicheck_targets,sw,\
 	UITest_writer_tests5 \
 	UITest_writer_tests6 \
 	UITest_writer_tests7 \
+	UITest_writer_tests8 \
 	UITest_sw_table \
 	UITest_sw_chart \
 	UITest_sw_fieldDialog \
